--- a/src/styles/scrolltotop.css
+++ b/src/styles/scrolltotop.css
@@ -48,7 +48,7 @@
   .scroll-to-top {
     width: 42px;
     height: 42px;
-    bottom: 20px;
+    bottom: 70px;
     right: 16px;
   }
   
