--- a/src/styles/whatsappbutton.css
+++ b/src/styles/whatsappbutton.css
@@ -36,7 +36,7 @@
   .whatsapp-float {
     width: 42px;
     height: 42px;
-    bottom: 76px;
+    bottom: 122px;
     right: 16px;
   }
 
